<resources>
    <string name="app_name">Lab Moklet Futsal App</string>
    <string name="tahun_ditambahkan">Tahun Ditambahkan</string>
    <string name="nama_team">Nama Team</string>
    <string name="list_match">List Match</string>
    <string name="tambah_match">Tambah Match</string>
    <string name="hapus_match">Hapus Match</string>
    <string name="match_1">Match 1</string>
    <string name="_18_03_2003">18/03/2003</string>
    <string name="tambah_match_text">Tambah Match</string>
    <string name="nama_match">Nama Match:</string>
    <string name="hint_nama_tim">nama tim</string>
    <string name="jersey_home">Jersey Home:</string>
    <string name="tim_away">Tim Away:</string>
    <string name="tim_home">Tim Home:</string>
    <string name="button_back">Button Back</string>
    <string name="jersey_away">Jersey Away:</string>
    <string name="hint_tanggal_match">DD-MM-YY</string>
    <string name="tanggal_match">Tanggal Match:</string>
    <string name="season">Season:\n</string>
    <string name="hint_season">Season 2 (contoh)</string>
    <string name="competition">"Competition: "</string>
    <string name="hint_competition">Liga Reguler (contoh)</string>
    <string name="mulai_match">Mulai Match</string>
    <string name="button_start_match">Button Start Match</string>
    <string name="dd_mm_yy">DD-MM-YY</string>
    <string name="waktu_match">Waktu Match:\n</string>
    <string name="_00_00_minutes">00:00 Minutes</string>
    <string name="aksi_pemain_pemain"><![CDATA[Aksi Pemain : <Pemain>]]></string>
    <string name="shoot_fail">Shoot Fail</string>
    <string name="shoot_goal">Shoot Goal</string>
    <string name="assist">Assist</string>
    <string name="_10m_fail">10M Fail</string>
    <string name="_10m_goal">10M Goal</string>
    <string name="valley">Valley</string>
    <string name="long_">Long</string>
    <string name="detail_match">Detail Match</string>

    <string-array name="gender_array">
        <item>Pilih Kelamin</item>
        <item>Laki-Laki</item>
        <item>Wanita</item>
    </string-array>

    <string-array name="posisi_array">
        <item>Pilih Posisi</item>
        <item>Goal Keeper</item>
        <item>Centre Back</item>
        <item>Left Back</item>
        <item>Right Back</item>
        <item>Defensive Midfielder</item>
        <item>Central Midfielder</item>
        <item>Attacking Midfielder</item>
        <item>Left Winger</item>
        <item>Right Winger</item>
        <item>Centre Forward</item>
        <item>Second Striker</item>
    </string-array>

    <string-array name="status_array">
        <item>Pilih Status</item>
        <item>Pemain Aktif</item>
        <item>Pemain Cadangan</item>
    </string-array>

    <string-array name="lateralitas_array">
        <item>Pilih Lateralitas</item>
        <item>Unilateral</item>
        <item>Bilateral</item>
        <item>Ipsilateral</item>
        <item>Contralateral</item>
    </string-array>

</resources>